Fix inventory upload and purchases, align orders table and show name of file when uploading

--- a/VideogameShop.Web/wwwroot/css/orders.css
+++ b/VideogameShop.Web/wwwroot/css/orders.css
@@ -1,21 +1,15 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-/*Styling for the home page*/
-body {
+﻿body {
     color: #212529;
     background-color: antiquewhite;
     margin: 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../lib/images/homeBackground.jpg);
     background-size: cover;
-    padding:0;
+    padding: 0;
 }
+
 #window {
     height: 85%;
-    
-}
-#main {
-    height: 100%
+    min-width:60%;
 }
 
 .navbar {
@@ -24,9 +18,9 @@ body {
 }
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: left;
-  word-break: break-all;
+    white-space: normal;
+    text-align: left;
+    word-break: break-all;
 }
 
 
@@ -37,10 +31,11 @@ a.navbar-brand {
 #dataTable_wrapper {
     background-color: #F5F5DC;
     border-radius: 5px;
-    margin-top:20px;
-    margin-bottom:20px;
 }
 
+.dataTables_filter {
+    align-self: flex-end;
+}
 
 /* Provide sufficient contrast against white background */
 a {
@@ -48,55 +43,58 @@ a {
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #000;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
     position: absolute;
     bottom: 0;
